# Meeting-Summarizer

./: .env.example  .gitignore  LICENSE  README.md  backend.py  main.py  pdf_extractor.py  pdf_generator.py  pyproject.toml  railway.json  requirements.txt  service_account.json.example  summary_generator.py  transcribe.py
app/: main.py
app/api/: audio.py  upload.py
app/core/: config.py  exceptions.py
app/services/: audio_processor.py  summary.py  transcription.py
app/services/rag/: __init__.py  agent.py  ingestion.py  mcp_server_file.json  retriever.py  store.py  tools.py
app/utils/: logger.py
static/: app.js  index.html  style.css
templates/: index.html
